<resources>
    <string name="nav_header_title">Weather Forecast Demo</string>
    <string name="nav_header_subtitle">By Marek Poláček</string>
    <string name="nav_header_desc">This demo showcases weather forecast using data acquired from CHMI</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_today">Today</string>
    <string name="menu_week">This Week</string>
    <string name="app_name">TAMZ: Weather Forecast Demo</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="today_12am">12:00 AM</string>
    <string name="today_1am">1:00 AM</string>
    <string name="today_2am">2:00 AM</string>
    <string name="today_3am">3:00 AM</string>
    <string name="today_4am">4:00 AM</string>
    <string name="today_5am">5:00 AM</string>
    <string name="today_6am">6:00 AM</string>
    <string name="today_7am">7:00 AM</string>
    <string name="today_8am">8:00 AM</string>
    <string name="today_9am">9:00 AM</string>
    <string name="today_10am">10:00 AM</string>
    <string name="today_11am">11:00 AM</string>
    <string name="today_12pm">12:00 PM</string>
    <string name="today_1pm">1:00 PM</string>
    <string name="today_2pm">2:00 PM</string>
    <string name="today_3pm">3:00 PM</string>
    <string name="today_4pm">4:00 PM</string>
    <string name="today_5pm">5:00 PM</string>
    <string name="today_6pm">6:00 PM</string>
    <string name="today_7pm">7:00 PM</string>
    <string name="today_8pm">8:00 PM</string>
    <string name="today_9pm">9:00 PM</string>
    <string name="today_10pm">10:00 PM</string>
    <string name="today_11pm">11:00 PM</string>
    <string name="week_mon">Mon</string>
    <string name="week_tue">Tue</string>
    <string name="week_wed">Wed</string>
    <string name="week_thu">Thu</string>
    <string name="week_fri">Fri</string>
    <string name="week_sat">Sat</string>
    <string name="week_sun">Sun</string>
    <string name="general_temp">Temperature</string>
    <string name="general_weather">Weather</string>
    <string name="general_humidity">Humidity</string>
    <string name="general_featured">Featured Forecast</string>
    <string name="general_wind">Wind</string>
    <string name="temp_celsius" translatable="false">°C</string>
    <string name="temp_fahrenheit" translatable="false">°F</string>
    <string name="general_windchill">Windchill</string>
    <string name="general_heatfac">Heat Factor</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_cloudy_part">Partly Cloudy</string>
    <string name="weather_sunny_nearly">Nearly Sunny</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="weather_rain_snow">Rain and Snow</string>
    <string name="wind_north">N</string>
    <string name="wind_northwest">NW</string>
    <string name="wind_northeast">NE</string>
    <string name="wind_west">W</string>
    <string name="wind_east">E</string>
    <string name="wind_south">S</string>
    <string name="wind_southwest">SW</string>
    <string name="wind_southeast">SE</string>
    <string name="wind_windless">Windless</string>
    <string name="wind_breeze">Breeze</string>
    <string name="wind_wind">Wind</string>
    <string name="wind_strong">Strong Wind</string>
    <string name="wind_windstorm">Windstorm</string>
    <string name="wind_hurricane">Hurricane</string>
    <string name="action_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
