<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="cz.vsb.fei.pol0423.tamz.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>
    <fragment android:id="@+id/nav_today" android:name="cz.vsb.fei.pol0423.tamz.ui.other.TodayFragment"
              android:label="@string/menu_today" tools:layout="@layout/nav_today"/>
    <fragment android:id="@+id/nav_week" android:name="cz.vsb.fei.pol0423.tamz.ui.other.WeekFragment"
              android:label="@string/menu_week" tools:layout="@layout/nav_week"/>
    <fragment android:id="@+id/nav_settings" android:name="cz.vsb.fei.pol0423.tamz.ui.other.SettingsFragment"
              android:label="@string/action_settings"/>
    <fragment android:id="@+id/nav_maps" android:name="cz.vsb.fei.pol0423.tamz.ui.other.MapsFragment"
              android:label="Pick the location on a map" tools:layout="@layout/nav_maps"/>
    <fragment android:id="@+id/nav_about" android:name="cz.vsb.fei.pol0423.tamz.AboutFragment"
              android:label="@string/action_about" tools:layout="@layout/nav_about"/>

</navigation>
